@@ -1,0 +1,4 @@
+2008-11-09  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+	* Makefile.in.in:
+
